--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
-    "dayjs": "^1.8.22",
+    "date-fns": "^2.11.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
